[package]
name = "guava-client"
version = "0.1.0"
edition = "2018"
authors = ["Pelanyo Kamara <pkamara@disroot.org>"]

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
reqwest = "0.11.4"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"

[env]
RUST_LOG = "debug"